--- a/.github/workflows/code_quality_checks.yml
+++ b/.github/workflows/code_quality_checks.yml
@@ -8,6 +8,7 @@ on:
   push:
     branches:
       - master
+      - test
 
 jobs:
   build:
@@ -28,9 +29,12 @@ jobs:
       - name: Analysing the code with pylint
         run: |
           pylint --rcfile=.pylintrc **/*.py
-      - name: Run unit tests
+      - name: Install Xvfb
         run: |
-          python -m unittest discover -s src/test/python
-      - name: Run main project script
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$PYTHONPATH:$(pwd)/src" >> $GITHUB_ENV
+      - name: Run unit tests with Xvfb
         run: |
-          python src/main/python/main.py
+          xvfb-run --auto-servernum python -m unittest discover -s src/test/python
