--- a/.github/workflows/code_quality_checks.yml
+++ b/.github/workflows/code_quality_checks.yml
@@ -1,14 +1,16 @@
 name: Code_Quality_and_Tests
 
 on:
+  push:
+    branches:
+      - master
+      - dev
+      - feature/*
   pull_request:
     branches:
       - master
       - dev
-  push:
-    branches:
-      - master
-      - test
+      - feature/*
 
 jobs:
   build:
@@ -16,11 +18,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version: '3.8'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
